--- a/Form/form.html
+++ b/Form/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <tittle>THE FORM</tittle>
+    <tittle></tittle>
  <style>
  	body{
 	background-color: #D5FCBD;
@@ -12,8 +12,8 @@
 <body>
 
 <form>
-     <feildset>
-     <legend>REGISTER HERE</legend>
+     
+     <h1><center>REGISTER HERE</center></h1>
      <table width="100%">
       <tr>
          <td width="50%" align="right">NAME:</td>
@@ -58,7 +58,7 @@
          <td width="50%" align="left"><input type="submit" value="save"/></td>
       </tr>
 
-     </feildset>
+     
 </form>
 </body>
 </html>
